nova: Allow deallocating networks on VM reschedules

--- a/romana-install/roles/stack-compute/templates/local.conf
+++ b/romana-install/roles/stack-compute/templates/local.conf
@@ -10,6 +10,9 @@ enable_service rabbit
 enable_service neutron
 enable_service q-dhcp
 
+NOVA_REPO=https://github.com/romana/nova.git
+NOVA_BRANCH=master
+
 ADMIN_PASSWORD="{{ devstack_password }}"
 SERVICE_PASSWORD="{{ devstack_password }}"
 DATABASE_PASSWORD="{{ devstack_password }}"
