--- a/romana-install/config.yml
+++ b/romana-install/config.yml
@@ -19,16 +19,17 @@
 - hosts: controller
   roles:
     - romana/install-master
+    - romana/postinstall
+
+# Install and launch agent
+- hosts: stack_nodes
+  roles:
+    - romana/install-agent
 
 # Include romana+stack playbooks. Only the configured stack will be applied
 - include: romana.devstack.yml
 # - include: romana.openstack.yml
 - include: romana.kubernetes.yml
-
-# Install and launch agent (must be after other stages)
-- hosts: stack_nodes
-  roles:
-    - romana/install-agent
 
 # Generate a summary
 - hosts: localhost
