Change rootUrl to rootURL

--- a/romana-install/roles/romana/install-agent/templates/romana-agent.conf
+++ b/romana-install/roles/romana/install-agent/templates/romana-agent.conf
@@ -13,6 +13,6 @@ script
     if [ -r /etc/default/romana-agent ]; then
         . /etc/default/romana-agent || true
     fi
-    exec {{ romana_dir }}/bin/agent -rootUrl http://{{ stack_nodes.Controller.mgmt_ip }}:9600
+    exec {{ romana_dir }}/bin/agent -rootURL http://{{ stack_nodes.Controller.mgmt_ip }}:9600
 end script
 
