--- a/romana-install/roles/romana/install-master/templates/romana-ipam.conf
+++ b/romana-install/roles/romana/install-master/templates/romana-ipam.conf
@@ -13,6 +13,6 @@ script
     if [ -r /etc/default/romana-ipam ]; then
         . /etc/default/romana-ipam || true
     fi
-    exec {{ romana_dir }}/bin/ipam -rootUrl http://{{ stack_nodes.Controller.mgmt_ip }}:9600
+    exec {{ romana_dir }}/bin/ipam -rootURL http://{{ stack_nodes.Controller.mgmt_ip }}:9600
 end script
 
