--- a/romana-install/roles/romana/install-master/templates/romana-tenant.conf
+++ b/romana-install/roles/romana/install-master/templates/romana-tenant.conf
@@ -13,6 +13,6 @@ script
     if [ -r /etc/default/romana-tenant ]; then
         . /etc/default/romana-tenant || true
     fi
-    exec {{ romana_dir }}/bin/tenant -rootUrl http://{{ stack_nodes.Controller.mgmt_ip }}:9600
+    exec {{ romana_dir }}/bin/tenant -rootURL http://{{ stack_nodes.Controller.mgmt_ip }}:9600
 end script
 
