--- a/romana-install/roles/romana/install-master/templates/romana-topology.conf
+++ b/romana-install/roles/romana/install-master/templates/romana-topology.conf
@@ -13,6 +13,6 @@ script
     if [ -r /etc/default/romana-topology ]; then
         . /etc/default/romana-topology || true
     fi
-    exec {{ romana_dir }}/bin/topology -rootUrl http://{{ stack_nodes.Controller.mgmt_ip }}:9600
+    exec {{ romana_dir }}/bin/topology -rootURL http://{{ stack_nodes.Controller.mgmt_ip }}:9600
 end script
 
