--- a/kubernetes/romana.agent.rc
+++ b/kubernetes/romana.agent.rc
@@ -1,3 +1,3 @@
 screen -t romana-agent
 select 0
-stuff "until nc -z __MASTER_IP__ 9600; do sleep 10; done; until ip link | grep -q romana-gw; do sleep 10; done; /bin/agent -rootUrl http://__MASTER_IP__:9600^M"
+stuff "until nc -z __MASTER_IP__ 9600; do sleep 10; done; until ip link | grep -q romana-gw; do sleep 10; done; /bin/agent -rootURL http://__MASTER_IP__:9600^M"
