--- a/romana-install/config.devstack.yml
+++ b/romana-install/config.devstack.yml
@@ -17,3 +17,7 @@
 - hosts: devstack_computes
   roles:
     - stack/devstack/install-compute
+
+- hosts: devstack_controller
+  roles:
+    - stack/devstack/postinstall
