--- a/romana-install/roles/stack/openstack/install-compute/tasks/neutron.yml
+++ b/romana-install/roles/stack/openstack/install-compute/tasks/neutron.yml
@@ -9,6 +9,8 @@
 
 - name: Install neutron configuration
   template: src="neutron.conf" dest="/etc/neutron/neutron.conf"
+  when: inventory_hostname not in groups.openstack_controller
 
-#- name: Install networking-romana module
+# - name: Install networking-romana module
 #  pip: name="git+https://github.com/romana/networking-romana@realign-requirements" editable=false
+#  when: inventory_hostname not in groups.openstack_controller
