--- a/romana-install/roles/stack/openstack/install-compute/tasks/neutron_packages_debian.yml
+++ b/romana-install/roles/stack/openstack/install-compute/tasks/neutron_packages_debian.yml
@@ -2,5 +2,5 @@
 - name: Install neutron service and dependencies
   apt: pkg="{{ item }}"
   with_items:
-    - neutron-dhcp-agent
+    - neutron-common
     - conntrack
