Now behaving exactly like devstack.

--- a/romana-install/roles/stack/openstack/install-compute/templates/nova.conf
+++ b/romana-install/roles/stack/openstack/install-compute/templates/nova.conf
@@ -10,6 +10,7 @@ libvirt_use_virtio_for_bridges=True
 verbose=True
 ec2_private_dns_show_ip=True
 api_paste_config=/etc/nova/api-paste.ini
+force_config_drive = True
 enabled_apis=ec2,osapi_compute,metadata
 rpc_backend = rabbit
 auth_strategy = keystone
