--- a/romana-install/roles/stack/openstack/install-controller/templates/nova.conf
+++ b/romana-install/roles/stack/openstack/install-controller/templates/nova.conf
@@ -11,6 +11,7 @@ verbose=True
 ec2_private_dns_show_ip=True
 api_paste_config=/etc/nova/api-paste.ini
 enabled_apis=osapi_compute,metadata
+force_config_drive = True
 rpc_backend = rabbit
 auth_strategy = keystone
 network_api_class = nova.network.neutronv2.api.API
