--- a/romana-install/roles/stack/openstack/install-compute/tasks/nova.yml
+++ b/romana-install/roles/stack/openstack/install-compute/tasks/nova.yml
@@ -18,8 +18,10 @@
 - name: Install nova-compute configuration
   template: src="nova-compute.conf" dest="/etc/nova/nova-compute.conf"
 
-- name: Start nova services
-  service: name="{{ item }}" state="started"
-  with_items:
-    - libvirt-bin
-    - nova-compute
+- include: "{{ item }}"
+  with_first_found:
+    - files:
+      - "nova_services_{{ ansible_distribution|lower }}_{{ ansible_distribution_release|lower }}.yml"
+      - "nova_services_{{ ansible_distribution|lower }}.yml"
+      - "nova_services_{{ ansible_os_family|lower }}.yml"
+      skip: true
